Using browser router and fixed styling for dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -23,16 +23,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-/*.dark-bg {*/
-/*  background-color: #282c34;*/
-/*  color: white;*/
-/*  width: 50%;*/
-/*  flex-direction: column;*/
-/*  align-items: center;*/
-/*  justify-content: center;*/
-/*}*/
-
+.navbar-brand{
+  color: white;
+}
 .App-link {
   color: #61dafb;
 }
@@ -46,6 +39,3 @@
   }
 }
 
-table {
-  margin-top: 50px;
-}
